Finish api & add swagger docs for api functionality + misc fixes
* Finished off POST for new cron api routes.

* Documented using swagger docs.

* Also some css tweaks & access new jobs page tweaks.
